<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/Con"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/image_splash"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="Conductor"
            android:text="@string/conductor"
            android:textAllCaps="false"
            android:textColor="@color/white_"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Pas"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/Con"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="Passenger"
            android:text="@string/passenger"
            android:textAllCaps="false"
            android:textColor="@color/white_"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/image_splash"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            android:textSize="25sp" />

    </RelativeLayout>
</LinearLayout>