<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RouteActivity">

    <ImageView
        android:id="@+id/image_splash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_splash"
        android:layout_above="@id/button">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Spinner
        android:id="@+id/routeSpinner"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:singleLine="true"
                android:maxLines="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:hint="@string/enter_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="lollipop" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:maxLines="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:hint="@string/enter_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="lollipop" />
        </RelativeLayout>
    </LinearLayout>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B08B8989"/>

    </LinearLayout>
    </ScrollView>
    </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            android:text="@string/submit"
            android:textColor="@color/white_"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:onClick="submit"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"/>
</RelativeLayout>