<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".TicketActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/menu_logo"
            android:tint="@color/white_"
            android:onClick="Home"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/white_"
            android:textSize="16.7sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/image_splash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo" />

<LinearLayout
    android:layout_below="@id/image_splash"
    android:layout_width="match_parent"
    android:layout_above="@id/book"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_name"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="text"
                android:id="@+id/passName"
                android:singleLine="true"
                android:maxLines="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:hint="@string/enter_passenger_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="o"
                android:autofillHints="@string/enter_passenger_name" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_number"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passNo"
                android:singleLine="true"
                android:maxLines="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:inputType="number"
                android:hint="@string/enter_passenger_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="o"
                android:autofillHints="@string/enter_passenger_no" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket_number"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="20dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/ticNumber"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:textAlignment="textEnd"
                        android:inputType="number"
                        android:hint="@string/enter_ticket_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        tools:targetApi="o"
                        android:autofillHints="@string/enter_ticket_no" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B08B8989"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_amp_destination"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="20dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/placeSpinner"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B08B8989"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/totalAmount"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/total_amount"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="number"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="o"
                android:autofillHints="@string/total_amount" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_amount_"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passAm"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:textAlignment="textEnd"
                android:inputType="number"
                android:hint="@string/enter_amount"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                tools:targetApi="o"
                android:autofillHints="@string/enter_amount" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_amount"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/balAmount"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/balance_amount"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B08B8989"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

        <Button
            android:id="@+id/book"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/book_ticket"
            android:textColor="@color/white_"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:onClick="Booking"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"/>

    </RelativeLayout>
</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemTextColor="@color/black"
        app:itemTextAppearance="@style/NavDrawerTextStyle"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        android:paddingTop="15dp"
        app:headerLayout="@layout/header_layout"
        tools:ignore="RtlSymmetry" >

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B08B8989"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/black"
                android:text="@string/exit"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="7dp" />

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>